<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Top Right Decorative Circle -->
    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:translationX="100dp"
        android:translationY="-100dp"
        android:background="@drawable/circle_shape" />


    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- Person with groceries image -->

        <!-- Welcome Text -->

        <ImageView
            android:layout_width="225dp"
            android:layout_height="247dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="Welcome image"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- App Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/primary_green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Tagline -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/tagline"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <!-- Get Started Button -->
        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary_green"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Bottom Left Decorative Circle -->
    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-50dp"
        android:layout_marginStart="-50dp"
        android:background="@drawable/circle_shape"/>

</RelativeLayout>